16-11-2023 6.2.135
- Calendar: Fixed calendar invite problem

09-12-2021 6.2.134
- Core: Fixed upgrade error when upgrading from v3.7

18-02-2021 6.2.133
- Calendar: using the accept / decline links showed incorrect sender in message to organizer
- Calendar: Fixed 'User was not invited for this event' when participant was added to an exception in the recurring series.

17-11-2020 6.2.132
- Groups: Users could see read only groups in the manage area
- Email: Fixed problem in Thunderbird e-mails that were cut off. Issue #632.
- ActiveSync: Problem with iOS 14
- Calendar: Accept appointment dialog didn't show

13-10-2020 6.2.131
- Calendar: Missing delete link in cancellation e-mail
- Gota: signed the application with new certificate

21-09-2020 6.2.130
- Core: Fixed not found error on compressing folders.

21-09-2020 6.2.129
- Email: Strip invalid chars from attachments when creating temporary files
- Calendar: optimized loading performance
- Core: Workaround Safari 14.0 bug where it hangs with 100% CPU usage

07-09-2020 6.2.128
- Core: Wrong encoding for 7.1+ version

25-08-2020 6.2.127
- Files: Added permission checks to compress functions
- SMIME: Check OCSP locally if smime_root_cert_location is set in config.php
- Calendar: Missing resource admin email #201919703
- Calendar: Category permissions  #202020841
- Tickets: Only messages from agent are sent to CC contact #201919432
- Calender: Bug changing "this and future events" #202021084
- Calendar: No notification when a participant is removed #202021083

11-06-2020 6.2.126
- Calendar: Fix for "No participant found for this event"

03-02-2020 6.2.125
- Sieve: Don't use :create flag on sieve filter action fileinto
- Files: Check if old user wasn't deleted when recalculating quota
- Calendar: Fixed view grid misalignment

27-01-2020 6.2.124
- Tickets: Show confirm on closing tickets option broke module settings and email viewing.

21-01-2020 6.2.123
- Sieve: Remove :create flag in fileinto command