@@ -1,3 +1,6 @@
+
+- Core: fix PHP compatibility error in StringHelper
+
 16-11-2023 6.2.135
 - Calendar: Fixed calendar invite problem
 
